--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
       color: #444;
     }
 
+    /* Icona YouTube */
+    .youtube-icon {
+      text-align: center;
+      margin-top: 18px;
+    }
+    .youtube-icon svg {
+      transition: transform 0.25s ease;
+      cursor: pointer;
+    }
+    .youtube-icon svg:hover {
+      transform: scale(1.08);
+    }
+
     a {
       color: #5a7b5d;
       text-decoration: none;
@@ -48,17 +61,6 @@
 
     a:hover {
       text-decoration: underline;
-    }
-
-    /* Icona YouTube */
-    .youtube-icon {
-      margin-top: 20px;
-      display: flex;
-      justify-content: center;
-    }
-    .youtube-icon svg:hover rect {
-      fill: #7c9c80;
-      transition: 0.3s;
     }
 
     section {
@@ -197,17 +199,17 @@
     <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
       <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
 
-      <!-- (𝗜 𝗧𝗨𝗢𝗜 𝗣𝗥𝗢𝗚𝗘𝗧𝗧𝗜 𝗣𝗥𝗘𝗦𝗘𝗡𝗧𝗜𝗟 𝗥𝗜𝗠𝗔𝗡𝗚𝗢𝗡𝗢 𝗜𝗡𝗔𝗥𝗧𝗔𝗧𝗜) -->
-      <!-- Li ho lasciati intatti come li avevi -->
-      <!-- Se vuoi posso aggiungere didascalie, titoli fissi o frecce per la slider -->
-
       <!-- PROGETTO TESI -->
       <div class="portfolio-item">
         <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
         <div class="portfolio-slider">
-          <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
+          <img src="progetto_tesi/cover.jpg" alt="Cover tesi">
         </div>
-        <p>La mia tesi esplora il <strong>design come pratica di riparazione</strong> …</p>
+        <p>
+          La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico. 
+          Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione.
+          Il lavoro propone il design come <em>atto di cura</em>, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
+        </p>
         <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
       </div>
 
@@ -215,37 +217,91 @@
       <div class="portfolio-item">
         <h3>Progetto Fotografico — Autoritratti e Luce</h3>
         <div class="portfolio-slider">
-          <img src="progetto1_fotografia/cover.jpg">
-          <!-- …resto delle immagini… -->
+          <img src="_progetto1_fotografia/cover.jpg">
+          <img src="_progetto1_fotografia/img1.jpg">
+          <img src="_progetto1_fotografia/img2.jpg">
+          <img src="_progetto1_fotografia/img3.jpg">
+          <img src="_progetto1_fotografia/img4.jpg">
+          <img src="_progetto1_fotografia/img5.jpg">
+          <img src="_progetto1_fotografia/img6.jpg">
+          <img src="_progetto1_fotografia/img7.jpg">
+          <img src="_progetto1_fotografia/img8.jpg">
+          <img src="_progetto1_fotografia/img9.jpg">
+          <img src="_progetto1_fotografia/img10.jpg">
+          <img src="_progetto1_fotografia/img11.jpg">
+          <img src="_progetto1_fotografia/img12.jpg">
+          <img src="_progetto1_fotografia/img13.jpg">
+          <img src="_progetto1_fotografia/img14.jpg">
+          <img src="_progetto1_fotografia/img15.jpg">
+          <img src="_progetto1_fotografia/img16.jpg">
         </div>
-        <p>Il progetto nasce da una riflessione sulla <strong>radioestesia</strong> …</p>
+        <p>
+          Una serie di <strong>autoritratti</strong> in cui utilizzo uno specchio per riflettere la luce del sole, generando un riflesso totalmente bianco. 
+          <br>Bianco, un <em>non-colore</em> che però contiene in sé tutti i colori dello spettro. 
+          In stampa, questa luce si trasforma in assenza visiva, evocando un’immagine che esiste solo come presenza luminosa: 
+          un dialogo tra corpo, spazio e materia immateriale.
+        </p>
+        <p><em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, quando contempliamo le bianche profondità della Via Lattea? O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – un incolore onnicolore d’ateismo dal quale rifuggiamo?…”<br>— Herman Melville, <em>Moby Dick</em>, capitolo 42.</em></p>
+        <p>Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.</p>
       </div>
 
       <!-- PREMIO ROMETTI -->
       <div class="portfolio-item">
         <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
         <div class="portfolio-slider">
-          <img src="premio_rometti_ceramica/cover.jpg">
-          <!-- …resto delle immagini… -->
+          <img src="_premio_rometti_ceramica/cover.jpg">
+          <img src="_premio_rometti_ceramica/img1.jpg">
+          <img src="_premio_rometti_ceramica/img2.jpg">
+          <img src="_premio_rometti_ceramica/img3.jpg">
+          <img src="_premio_rometti_ceramica/img4.jpg">
+          <img src="_premio_rometti_ceramica/img5.jpg">
+          <img src="_premio_rometti_ceramica/img6.jpg">
         </div>
-        <p>Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong> …</p>
+        <p>
+          Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, 
+          presentando una natura intrinsecamente artistica, produttrice di organismi belli e allo stesso tempo funzionali. 
+          La ritmicità della pianta e la sua forma è costruita secondo una logica e un’utilità necessaria per la sua sopravvivenza.
+        </p>
+        <p>
+          Gli <em>equiseti</em> fotografati da Blossfeldt, astratti dal loro contesto ambientale, diventano simbolo di una forma ornamentale: 
+          una natura che si manifesta come arte. La natura non è esplicitamente rappresentata, ma permane come paradigma per la nuova realtà che si crea.
+        </p>
+        <p>
+          L’idea nasce dal desiderio di recuperare l’elemento naturale, alla ricerca di un equilibrio tra <strong>artificio e natura</strong>, tra oggettualità e naturalità. 
+          Il materiale argilloso prevede la manipolazione diretta della sostanza naturale, che viene trasformata in un oggetto distinto: 
+          un vaso che sintetizza la forma del fiore dell’equiseto.
+        </p>
+        <p>
+          Nella sua forma si ritrovano le dilatazioni e contrazioni tipiche della pianta, realizzate successivamente alla tornitura attraverso la sottrazione della materia. 
+          Il progetto è stato realizzato per la partecipazione a un <strong>bando dell’azienda Rometti</strong> in Umbria.
+        </p>
       </div>
 
       <!-- PROGETTO OREFICERIA -->
       <div class="portfolio-item">
         <h3>Progetto di Oreficeria — Forme Marine</h3>
         <div class="portfolio-slider">
-          <img src="progetto2_oreficeria/cover.jpg">
-          <!-- …resto delle immagini… -->
+          <img src="_progetto2_oreficeria/cover.jpg">
+          <img src="_progetto2_oreficeria/img1.jpg">
+          <img src="_progetto2_oreficeria/img2.jpg">
+          <img src="_progetto2_oreficeria/img3.jpg">
+          <img src="_progetto2_oreficeria/img4.jpg">
+          <img src="_progetto2_oreficeria/img5.jpg">
+          <img src="_progetto2_oreficeria/img6.jpg">
+          <img src="_progetto2_oreficeria/img7.jpg">
         </div>
-        <p>Una collezione di anelli ispirati alle <strong>forme naturali marine</strong> …</p>
+        <p>
+          Una collezione di <strong>anelli ispirati alle forme naturali marine</strong>, realizzati interamente a mano con la tecnica della <em>cera persa</em>. 
+          Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, 
+          trasformando la materia in una preziosa testimonianza del mondo sommerso.
+        </p>
       </div>
 
     </div>
   </section>
 
   <footer>
-    © 2025 — Portfolio di Lucrezia Dori
+    © 2024 Lucrezia Dori — Tutti i diritti riservati
   </footer>
 
 </body>
