--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
       <div class="portfolio-item">
         <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
         <div class="portfolio-slider">
-          <img src="progetto_tesi/cover.jpg" alt="Cover tesi">
+          <img src="progetto_tesi/cover.jpg" alt="cover tesi">
         </div>
         <p>
-          La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico. 
+          La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico.
           Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione.
           Il lavoro propone il design come <em>atto di cura</em>, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
         </p>
@@ -217,63 +217,52 @@
       <div class="portfolio-item">
         <h3>Progetto Fotografico — Autoritratti e Luce</h3>
         <div class="portfolio-slider">
-          <img src="_progetto1_fotografia/cover.jpg">
-          <img src="_progetto1_fotografia/img1.jpg">
-          <img src="_progetto1_fotografia/img2.jpg">
-          <img src="_progetto1_fotografia/img3.jpg">
-          <img src="_progetto1_fotografia/img4.jpg">
-          <img src="_progetto1_fotografia/img5.jpg">
-          <img src="_progetto1_fotografia/img6.jpg">
-          <img src="_progetto1_fotografia/img7.jpg">
-          <img src="_progetto1_fotografia/img8.jpg">
-          <img src="_progetto1_fotografia/img9.jpg">
-          <img src="_progetto1_fotografia/img10.jpg">
-          <img src="_progetto1_fotografia/img11.jpg">
-          <img src="_progetto1_fotografia/img12.jpg">
-          <img src="_progetto1_fotografia/img13.jpg">
-          <img src="_progetto1_fotografia/img14.jpg">
-          <img src="_progetto1_fotografia/img15.jpg">
-          <img src="_progetto1_fotografia/img16.jpg">
+          <img src="_progetto1_fotografia/cover.jpg" alt="cover fotografia">
+          <img src="_progetto1_fotografia/img1.jpg" alt="">
+          <img src="_progetto1_fotografia/img2.jpg" alt="">
+          <img src="_progetto1_fotografia/img3.jpg" alt="">
+          <img src="_progetto1_fotografia/img4.jpg" alt="">
+          <img src="_progetto1_fotografia/img5.jpg" alt="">
+          <img src="_progetto1_fotografia/img6.jpg" alt="">
+          <img src="_progetto1_fotografia/img7.jpg" alt="">
+          <img src="_progetto1_fotografia/img8.jpg" alt="">
+          <img src="_progetto1_fotografia/img9.jpg" alt="">
+          <img src="_progetto1_fotografia/img10.jpg" alt="">
+          <img src="_progetto1_fotografia/img11.jpg" alt="">
+          <img src="_progetto1_fotografia/img12.jpg" alt="">
+          <img src="_progetto1_fotografia/img13.jpg" alt="">
+          <img src="_progetto1_fotografia/img14.jpg" alt="">
+          <img src="_progetto1_fotografia/img15.jpg" alt="">
+          <img src="_progetto1_fotografia/img16.jpg" alt="">
         </div>
         <p>
-          Una serie di <strong>autoritratti</strong> in cui utilizzo uno specchio per riflettere la luce del sole, generando un riflesso totalmente bianco. 
-          <br>Bianco, un <em>non-colore</em> che però contiene in sé tutti i colori dello spettro. 
-          In stampa, questa luce si trasforma in assenza visiva, evocando un’immagine che esiste solo come presenza luminosa: 
+          Una serie di <strong>autoritratti</strong> in cui utilizzo uno specchio per riflettere la luce del sole, generando un riflesso totalmente bianco.
+          <br>Bianco, un <em>non-colore</em> che però contiene in sé tutti i colori dello spettro.
+          In stampa, questa luce si trasforma in assenza visiva, evocando un’immagine che esiste solo come presenza luminosa:
           un dialogo tra corpo, spazio e materia immateriale.
         </p>
-        <p><em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, quando contempliamo le bianche profondità della Via Lattea? O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – un incolore onnicolore d’ateismo dal quale rifuggiamo?…”<br>— Herman Melville, <em>Moby Dick</em>, capitolo 42.</em></p>
-        <p>Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.</p>
+        <p><em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo... — Herman Melville, <em>Moby Dick</em>, cap. 42.”</em></p>
+        <p>Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank">Premio Combat Prize</a>.</p>
       </div>
 
       <!-- PREMIO ROMETTI -->
       <div class="portfolio-item">
         <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
         <div class="portfolio-slider">
-          <img src="_premio_rometti_ceramica/cover.jpg">
-          <img src="_premio_rometti_ceramica/img1.jpg">
-          <img src="_premio_rometti_ceramica/img2.jpg">
-          <img src="_premio_rometti_ceramica/img3.jpg">
-          <img src="_premio_rometti_ceramica/img4.jpg">
-          <img src="_premio_rometti_ceramica/img5.jpg">
-          <img src="_premio_rometti_ceramica/img6.jpg">
+          <img src="_premio_rometti_ceramica/cover.jpg" alt="">
+          <img src="_premio_rometti_ceramica/img1.jpg" alt="">
+          <img src="_premio_rometti_ceramica/img2.jpg" alt="">
+          <img src="_premio_rometti_ceramica/img3.jpg" alt="">
+          <img src="_premio_rometti_ceramica/img4.jpg" alt="">
+          <img src="_premio_rometti_ceramica/img5.jpg" alt="">
+          <img src="_premio_rometti_ceramica/img6.jpg" alt="">
         </div>
         <p>
-          Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, 
-          presentando una natura intrinsecamente artistica, produttrice di organismi belli e allo stesso tempo funzionali. 
-          La ritmicità della pianta e la sua forma è costruita secondo una logica e un’utilità necessaria per la sua sopravvivenza.
-        </p>
-        <p>
-          Gli <em>equiseti</em> fotografati da Blossfeldt, astratti dal loro contesto ambientale, diventano simbolo di una forma ornamentale: 
-          una natura che si manifesta come arte. La natura non è esplicitamente rappresentata, ma permane come paradigma per la nuova realtà che si crea.
-        </p>
-        <p>
-          L’idea nasce dal desiderio di recuperare l’elemento naturale, alla ricerca di un equilibrio tra <strong>artificio e natura</strong>, tra oggettualità e naturalità. 
-          Il materiale argilloso prevede la manipolazione diretta della sostanza naturale, che viene trasformata in un oggetto distinto: 
-          un vaso che sintetizza la forma del fiore dell’equiseto.
-        </p>
-        <p>
-          Nella sua forma si ritrovano le dilatazioni e contrazioni tipiche della pianta, realizzate successivamente alla tornitura attraverso la sottrazione della materia. 
-          Il progetto è stato realizzato per la partecipazione a un <strong>bando dell’azienda Rometti</strong> in Umbria.
+          Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, presentando una natura intrinsecamente artistica e funzionale.
+          Gli <em>equiseti</em> da lui fotografati diventano simboli di forme ornamentali, una natura che si manifesta come arte. 
+          L’idea nasce dal desiderio di recuperare l’elemento naturale, alla ricerca di un equilibrio tra <strong>artificio e natura</strong>.
+          Il vaso è stato modellato in argilla con la tecnica della sottrazione, dopo la tornitura, e rappresenta la sintesi della forma del fiore dell’equiseto.
+          Partecipazione al <strong>bando Rometti</strong> in Umbria.
         </p>
       </div>
 
@@ -281,19 +270,18 @@
       <div class="portfolio-item">
         <h3>Progetto di Oreficeria — Forme Marine</h3>
         <div class="portfolio-slider">
-          <img src="_progetto2_oreficeria/cover.jpg">
-          <img src="_progetto2_oreficeria/img1.jpg">
-          <img src="_progetto2_oreficeria/img2.jpg">
-          <img src="_progetto2_oreficeria/img3.jpg">
-          <img src="_progetto2_oreficeria/img4.jpg">
-          <img src="_progetto2_oreficeria/img5.jpg">
-          <img src="_progetto2_oreficeria/img6.jpg">
-          <img src="_progetto2_oreficeria/img7.jpg">
+          <img src="_progetto2_oreficeria/cover.jpg" alt="">
+          <img src="_progetto2_oreficeria/img1.jpg" alt="">
+          <img src="_progetto2_oreficeria/img2.jpg" alt="">
+          <img src="_progetto2_oreficeria/img3.jpg" alt="">
+          <img src="_progetto2_oreficeria/img4.jpg" alt="">
+          <img src="_progetto2_oreficeria/img5.jpg" alt="">
+          <img src="_progetto2_oreficeria/img6.jpg" alt="">
+          <img src="_progetto2_oreficeria/img7.jpg" alt="">
         </div>
         <p>
-          Una collezione di <strong>anelli ispirati alle forme naturali marine</strong>, realizzati interamente a mano con la tecnica della <em>cera persa</em>. 
-          Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, 
-          trasformando la materia in una preziosa testimonianza del mondo sommerso.
+          Una collezione di <strong>anelli ispirati alle forme naturali marine</strong>, realizzati interamente a mano con la tecnica della <em>cera persa</em>.
+          Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, trasformando la materia in una preziosa testimonianza del mondo sommerso.
         </p>
       </div>
 
